--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Фільмова база</title>
     <style>
+        
         body {
             margin: 0;
             font-family: 'Segoe UI', sans-serif;
@@ -85,11 +86,10 @@
             width: 100%;
             height: 100%;
             background: rgba(0, 0, 0, 0.7);
-            display: flex;
+            display: none;
             justify-content: center;
             align-items: center;
             z-index: 1000;
-            display: none;
         }
         
         .modal-content {
@@ -117,7 +117,6 @@
 </head>
 
 <body>
-
     <div class="header">
         <h1>Фільмова база</h1>
     </div>
@@ -134,105 +133,14 @@
 
     <div id="moviesContainer" class="movies-grid"></div>
 
-
     <div id="modal" class="modal">
         <div class="modal-content">
-            <span class="close-btn" onclick="closeModal()">&times;</span>
+            <span class="close-btn" id="closeBtn">&times;</span>
             <div id="modalBody"></div>
         </div>
     </div>
 
-    <script>
-        const container = document.getElementById("moviesContainer");
-        const searchInput = document.getElementById("searchInput");
-        const genreFilter = document.getElementById("genreFilter");
-        const statusFilter = document.getElementById("statusFilter");
-        const modal = document.getElementById("modal");
-        const modalBody = document.getElementById("modalBody");
-
-        let allShows = [];
-
-        async function fetchShows() {
-            const response = await fetch("https://api.tvmaze.com/shows");
-            const shows = await response.json();
-            allShows = shows.slice(0, 50);
-            populateFilters(allShows);
-            renderShows(allShows);
-        }
-
-        function populateFilters(shows) {
-            const genres = new Set();
-            const statuses = new Set();
-
-            shows.forEach(show => {
-                show.genres.forEach(g => genres.add(g));
-                statuses.add(show.status);
-            });
-
-            genres.forEach(g => {
-                genreFilter.innerHTML += `<option value="${g}">${g}</option>`;
-            });
-
-            statuses.forEach(s => {
-                statusFilter.innerHTML += `<option value="${s}">${s}</option>`;
-            });
-        }
-
-        function renderShows(shows) {
-            container.innerHTML = "";
-
-            const filtered = shows.filter(show => {
-                const nameMatch = show.name.toLowerCase().includes(searchInput.value.toLowerCase());
-                const genreMatch = !genreFilter.value || show.genres.includes(genreFilter.value);
-                const statusMatch = !statusFilter.value || show.status === statusFilter.value;
-                return nameMatch && genreMatch && statusMatch;
-            });
-
-            if (filtered.length === 0) {
-                container.innerHTML = "<p>Нічого не знайдено.</p>";
-                return;
-            }
-
-            filtered.forEach(show => {
-                const card = document.createElement("div");
-                card.className = "movie-card";
-                card.onclick = () => openModal(show);
-
-                card.innerHTML = `
-          <img src="${show.image?.medium || ''}" alt="${show.name}" class="poster"/>
-          <div class="movie-info">
-            <h3>${show.name}</h3>
-            <p><strong>Жанр:</strong> ${show.genres.join(", ") || "Невідомо"}</p>
-            <p><strong>Статус:</strong> ${show.status}</p>
-          </div>
-        `;
-
-                container.appendChild(card);
-            });
-        }
-
-        function openModal(show) {
-            modalBody.innerHTML = `
-        <h2>${show.name}</h2>
-        <img src="${show.image?.original || ''}" alt="${show.name}" />
-        <p><strong>Жанри:</strong> ${show.genres.join(", ") || "Невідомо"}</p>
-        <p><strong>Статус:</strong> ${show.status}</p>
-        <p><strong>Прем'єра:</strong> ${show.premiered || "Невідомо"}</p>
-        <p><strong>Опис:</strong> ${show.summary || "Без опису"}</p>
-      `;
-            modal.style.display = "flex";
-        }
-
-        function closeModal() {
-            modal.style.display = "none";
-        }
-
-        searchInput.addEventListener("input", () => renderShows(allShows));
-        genreFilter.addEventListener("change", () => renderShows(allShows));
-        statusFilter.addEventListener("change", () => renderShows(allShows));
-
-        fetchShows();
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
